# lumaupdate

./: .gitignore  .gitmodules  CMakeLists.txt  DevkitArm3DS.cmake  LICENSE-3dscmake.txt  LICENSE.libmd5-rfc.txt  LICENSE.txt  Makefile  Makefile.config  README.md  arnupdate.cppcheck  icon.psd  lumaupdater.cfg  rominfo.rsf
cmake/: FindCITRO3D.cmake  FindFreeType.cmake  FindPNG.cmake  FindSF2D.cmake  FindSFIL.cmake  FindSFTD.cmake  FindZLIB.cmake
meta/: luma.cgfx  luma3d.cgfx  rominfo.rsf
meta/src/: COMMON.psd  LUMA.mtl  box.psd  icon.psd  loading-bg.psd  luma.merged.mtl  luma.merged.wings  luma.wings  lumaicon.psd
source/: 7z.h  Application.cpp  Application.h  HTTP.cpp  HTTP.h  Input.cpp  Input.h  Screen.h  State.cpp  State.h  Utils.cpp  Utils.h  archive.cpp  archive.h  arnutil.cpp  arnutil.h  autoupdate.cpp  autoupdate.h  config.cpp  config.h  console.cpp  console.h  http.cpp  http.h  libs.h  lumautils.cpp  lumautils.h  main.cpp  menu.cpp  menu.h  pathchange.cpp  pathchange.h  release.cpp  release.h  update.cpp  update.h  utils.cpp  utils.h  version.cpp  version.h
source/7z/: 7zDec.c  7zMemInStream.c  7zMemInStream.h  Bra.c  Bra.h  CpuArch.h  LzmaLib.c  LzmaLib.h
source/Screens/: ConsoleScreen.cpp  ConsoleScreen.h  ProgressScreen.cpp  ProgressScreen.h
source/States/: MainState.cpp  MainState.h
